--- a/todo_list.html
+++ b/todo_list.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h2>Todo List</h2>
-      <div class="box"></div>
+      <!-- <div class="box"></div> -->
       <input type="text" placeholder="Enter List" id="inputs" />
       <button id="btn" onclick="Add()">Enter</button>
       <div id="text"></div>
